2004-05-16  Martin Schaffner  <maschaffner@gmx.ch>

	* include/ogl_init.h, arch/ogl/*.c, arch/ogl/internal.h:
	move most ogl-internal stuff from the ogl interface header to
	new header file internal.h

2004-05-15  Dietfrid Mali  <dietfrid.mali@q-dial.de>

        * arch/sdl/joy.c: joystick_read_raw_axis() will return a proper
	bitmask for each joystick axis that has sent input data,
	and will not crash Windows anymore during joystick setup because
	of for() loop over axis being executed once too often.

	* main/gameseq.c, include/gr.h, 2d/font.c: define new function
	gr_remap_mono_font() and call it after loading saved level.

	* main/laser.c: limit homing missile turn rate

	* main/fuelcen.{c,h}, main/object.c: implement repair centers
	(work like fuel centers but provide shield)

	* main/gameseg.c: fix endless loop in some levels with a
	certain (complicated) structure

2004-05-13  Bradley Bell  <btb@icculus.org>

	* VisualC/d2/d2x/d2x.dsp, VisualC/d2xgl/d2xgl.dsp,
	VisualC/libmve/libmve.dsp, VisualC/mveplayer/mveplayer.dsp:
	updated project files for SDL 1.2.7

	* Makefile.am: add VisualC, VisualCE dirs to tarball

2004-05-13  Martin Schaffner  <maschaffner@gmx.ch>

        * arch/sdl/digi.c: formatting

2004-05-12  Bradley Bell  <btb@icculus.org>

	* unused/vga/new/palette.c, unused/vga/new/vga.c: removed unused,
	redundant files

	* 2d/palette.c, include/palette.h: added function to create blend
	tables

	* maths/rand.c, maths/tables.c, maths/vecmat.c: formatting

2004-05-11  Bradley Bell  <btb@icculus.org>

	* arch/ogl/ogl.c: fix alpha calculation in g3_draw_poly, again

2004-05-10  Bradley Bell  <btb@icculus.org>

	* arch/ogl/ogl.c, include/3d.h, main/render.c: hmm,
	g3_draw_transp_poly had the fade level backwards, decided to just
	fix g3_draw_poly so it behaves correctly, transparency or not,
	reverted changes to render_face

2004-05-10  Dietfrid Mali  <dietfrid.mali@q-dial.de>

	* arch/ogl/ogl.c, include/3d.h: added g3_draw_transp_poly() for