@@ -1,3 +1,8 @@
+2004-05-16  Dietfrid Mali  <dietfrid.mali@q-dial.de>
+
+        * main/wall.c: fix invalid memory access for d1 levels which
+	don't have a corresponding wall behind.
+
 2004-05-16  Martin Schaffner  <maschaffner@gmx.ch>
 
 	* include/ogl_init.h, arch/ogl/*.c, arch/ogl/internal.h:
